turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: ';' expected but ',' found.
T(0)=new Array[Int] {1,2,0,1,2,1}
                      ^